demo/manifests/gateway/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api.cnoe.localtest.me
      http:
        paths:
          - backend:
              service:
                name: ingress-gateway-istio
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-gateway
  annotations:
    networking.istio.io/service-type: NodePort
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      hostname: api.cnoe.localtest.me
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-to-httpbin
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: ingress
  hostnames:
    - "api.cnoe.localtest.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api
          namespace: httpbin
          port: 80
